feat: update swagger doc
